--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
 <dependency>
   <groupId>org.junit.jupiter</groupId>
-  <artifactId>junit-jupiter-api</artifactId> 
-  <version>5.0.0-M4</version>
-  <scope>test</scope>
+  <artifactId>junit-jupiter-api</artifactId>
+    <version>5.0.0-M4</version>
+    <scope>test</scope>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.opentest4j/opentest4j -->
@@ -52,11 +52,26 @@
       </dependency>
 
       <dependency>
+          <groupId>com.aventstack</groupId>
+          <artifactId>extentreports</artifactId>
+          <version>3.1.5</version>
+      </dependency>
+
+      <dependency>
           <groupId>javax.mail</groupId>
           <artifactId>mail</artifactId>
           <version>1.4.2</version>
       </dependency>
-       </dependencies>
+
+      <dependency>
+          <groupId>org.apache.maven.archetypes</groupId>
+          <artifactId>maven-archetype-quickstart</artifactId>
+          <version>1.3</version>
+      </dependency>
+
+  </dependencies>
+
+
   <build>
     <defaultGoal>clean compile assembly:single</defaultGoal>
     <sourceDirectory>src/java</sourceDirectory>
@@ -66,7 +81,7 @@
     </resource>
     </resources>
     <finalName>pm-test-standalone</finalName>
-    <plugins>
+      <plugins>
             <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -88,10 +103,8 @@
       <descriptorRefs>
           <descriptorRef>jar-with-dependencies</descriptorRef>
       </descriptorRefs>
-
       </configuration>
       </plugin>
     </plugins>
-
   </build>
 </project>
