--- a/src/java/com/amuselabs/test/Correspondents.properties
+++ b/src/java/com/amuselabs/test/Correspondents.properties
@@ -1,6 +1,6 @@
 #Properties file for UI components of Correspondents
 
-#correspondents=is for clicking on correspondents button browse top page.
+#user_interface=is for clicking on user_interface button browse top page.
 #name_of_a_Correspondent is for clicking on correspondents name eg click on Eli Ferrera,Kathleen Shanahan
 #data_in_CorrespondentsButton gives us the text(data) contained in Correspondents button browse top page.(eg Coorespondents(2251))
 #edit_correspondents is for clicking on EDIT CORRESPONDENTS after clicking on Correspondents in browse top page.
