--- a/src/test/resources/Labels.properties
+++ b/src/test/resources/Labels.properties
@@ -1,6 +1,6 @@
 #Properties file for the UI components of Labels
 #click_on_labels is used to select label in browse-top page
-#click_on_new_label=is used to select the "NEW LABEL" button after clicking on labels in browse-top page.
+#click_on_new_label=is used to select the "NEW LABEL" button after clicking on user_interface in browse-top page.
 
 
 #similarly the rest selectors are self-explanatory by their name.
