--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
           <artifactId>maven-archetype-quickstart</artifactId>
           <version>1.3</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+      </dependency>
 
   </dependencies>
 
