USER_INTERFACE.properties

--- a/src/test/resources/USER_INTERFACE.properties
+++ b/src/test/resources/USER_INTERFACE.properties
@@ -161,4 +161,9 @@ Person_Entities=Entities
 Advanced_Search=Advanced Search
 
 
+#components of import page
 
+mbox_file_location_textfield=#mboxes > div.account > div:nth-child(2) > div.input-field > input
+
+################
+selector_of_NoMatchingMessages_message=body > div:nth-child(6)
