USER_INTERFACE properties file

--- a/src/test/resources/USER_INTERFACE.properties
+++ b/src/test/resources/USER_INTERFACE.properties
@@ -32,15 +32,9 @@ text_of_entire_mail=#jog_contents
   
 From=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[2]/td[2]/a
 To=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[3]/td[2]/a 
-Cc=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]/a[2]
+Cc=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]/a
 bcc=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]/a[1]
 id=#jog_contents > div.muse-doc > div.muse-doc-header > table > tbody > tr:nth-child(6) > td:nth-child(2)
-new_id=#jog_contents > div.muse-doc > div.muse-doc-header > table > tbody > tr:nth-child(6) > td:nth-child(2)
-click_on_search=#bs-example-navbar-collapse > ul:nth-child(1) > li:nth-child(3) > a
-go_to_advanced_search=body > div:nth-child(7) > a
-sent_messages_in_CorrespondentsPage=body > div.browsepage > div:nth-child(1) > div > span:nth-child(18) > span
-received_messages_in_CorrespondentsPage=body > div.browsepage > div:nth-child(1) > div > span:nth-child(20) > span
-number_of_messages_opened_after_clicking_on_Correspondents_name=#pageNumbering
 
 
 
@@ -52,7 +46,6 @@ number_of_messages_opened_after_clicking_on_Correspondents_name=#pageNumbering
 #click_on_PersonEntities is used to select Person entities button in browse top page.
 
 click_on_name_in_Person_Entities=#entities > tbody > tr:nth-child(1) > td:nth-child(1) > span
-message_number=#entities > tbody > tr:nth-child(1) > td.sorting_2
 number_in_PersonEntity_BrowseTopPage=#all-cards > div:nth-child(2) > a > p.cta-text-1
 click_on_Person_Entities=#all-cards > div:nth-child(2)
 
@@ -63,12 +56,6 @@ click_on_Person_Entities=#all-cards > div:nth-child(2)
 
 number_of_messages_opened_after_clicking_on_PersonEntities_name=#pageNumbering
 body_of_mail=#jog_contents > div.muse-doc > div.muse-doc-body
-sent_messages_PersonEntities=body > div.browsepage > div:nth-child(1) > div > span:nth-child(23) > span
-received_messages_PersonEntities=body > div.browsepage > div:nth-child(1) > div > span:nth-child(25) > span
-underlined_words_Person_Entities=.custom-people
-highlighted_words_Person_Entities=.hilitedTerm
-click_on_search=#bs-example-navbar-collapse > ul:nth-child(1) > li:nth-child(3) > a
-go_to_advanced_search=body > div:nth-child(7) > a
 number_of_underlined_entity_you_see_in_page=6
 number_of_highlighted_entity_you_see_in_page=6
 clickOnEditEntities_PersonEntity=body > div:nth-child(6) > div:nth-child(7) > button
@@ -85,7 +72,6 @@ clickOnEntityName_OtherEntitiesPage=#entities > tbody > tr:nth-child(1) > td:nth
 
 
 
-message_number=#entities > tbody > tr:nth-child(1) > td.sorting_2
 sub_entity_name=#entities > tbody > tr:nth-child(1) > td:nth-child(1) > span
 number_of_entities_OtherEntites=#entities > tbody > tr:nth-child(1) > td.dt-right.sorting_1
 clickOnEditEntities=body > div:nth-child(6) > div:nth-child(7) > button
@@ -95,13 +81,7 @@ clickOnEditEntities=body > div:nth-child(6) > div:nth-child(7) > button
 
 
 
-number_of_messages_opened_after_clicking_on_subEntity_name=#pageNumbering
 body_of_mail_opened_onclick_subEntity=#jog_contents > div.muse-doc > div.muse-doc-body
-click_on_search=#bs-example-navbar-collapse > ul:nth-child(1) > li:nth-child(3) > a
-go_to_advanced_search=body > div:nth-child(7) > a
-sent_messages_in_OtherEntitiesPage=body > div.browsepage > div:nth-child(1) > div > span:nth-child(25) > span
-received_messages_in_OtherEntitiesPage=body > div.browsepage > div:nth-child(1) > div > span:nth-child(23) > span
-
 
 
 
@@ -130,7 +110,6 @@ label_type=#labels > tbody > tr.even > td.dt-right.sorting_1
 number_of_labels_on_messages=#labels > tbody > tr.even > td:nth-child(3)
 click_on_label_in_message_window_of_correspondents=body > div.browsepage > div:nth-child(3) > div > div.controls > div:nth-child(1) > div.form-group.label-picker > div > button > span.bs-caret > span
 choose_label=body > div.browsepage > div:nth-child(3) > div > div.controls > div:nth-child(1) > div.form-group.label-picker > div > div > ul > li:nth-child(8) > a
-number_of_messages_opened_after_clicking_on_Label_name=#pageNumbering
 
 
 
@@ -144,26 +123,26 @@ click_on_lexicon=#all-cards > div:nth-child(9)
 Lexicon_category=#table > tbody > tr:nth-child(1) > td.search
 number_of_messages_displayed_in_front_of_Lexicon=#table > tbody > tr:nth-child(1) > td.dt-right.sorting_1
 number_of_messages_opened_after_clicking_on_Lexicon_category=#pageNumbering
-edit_lexicon=#edit-lexicon
-click_on_add_a_category_in_edit_lexicon_page=#add-category
 go_to_graph_view_lexicon=body > div:nth-child(7) > button:nth-child(1)
-number_of_messages_of_lexicon_category_displayed_in_graph_view=#div_legend > svg > g:nth-child(2) > text
 
 
 
-#Properties file for the URLs of Pages
-Search_=Search:
-Search=Search
-Correspondents=Correspondents
-Archive_Information=Archive Information
-Browse=Browse
-Person_Entities=Entities
-Advanced_Search=Advanced Search
+#common property
+message_number=#entities > tbody > tr:nth-child(1) > td.sorting_2
+underlined_words_on_message_window=.custom-people
+highlighted_words_on_message_window=.hilitedTerm
+sent_messages_in_message_window=body > div.browsepage > div:nth-child(1) > div > span:nth-child(23) > span
+received_messages_in_message_window=body > div.browsepage > div:nth-child(1) > div > span:nth-child(25) > span
+number_of_messages_opened_after_clicking_on_a_name=#pageNumbering
 
 
-#components of import page
+#selectors of the search and Advanced Search pages
+click_on_search=#bs-example-navbar-collapse > ul:nth-child(1) > li:nth-child(3) > a
+go_to_advanced_search=body > div:nth-child(7) > a
 
-mbox_file_location_textfield=#mboxes > div.account > div:nth-child(2) > div.input-field > input
+
 
 ################
 selector_of_NoMatchingMessages_message=body > div:nth-child(6)
+
+Cc1=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]
