Add web driver location to properties file

--- a/Settings/epadd.test.properties
+++ b/Settings/epadd.test.properties
@@ -3,4 +3,5 @@ name=hello
 emailAddress=xyz@gmail.com
 data.dir=/home/ashu18/Projects/Archive/Bush Small/
 browserTopPage=http://localhost:9099/epadd/browse-top
+//webDriver.dir = src/test/resources
 
