--- a/pom.xml
+++ b/pom.xml
@@ -1,114 +1,188 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.amuselabs.test</groupId>
-  <artifactId>pm-test</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>pm-test</name>
-  <dependencies>
-	<dependency>
-		<groupId>commons-cli</groupId>
-		<artifactId>commons-cli</artifactId>
-		<version>1.2</version>
-	</dependency>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.amuselabs.test</groupId>
+    <artifactId>pm-test</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>pm-test</name>
 
-  <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
-<dependency>
-    <groupId>io.appium</groupId>
-    <artifactId>java-client</artifactId>
-    <version>5.0.4</version>
-</dependency>
+    <properties>
+        <junit.jupiter.version>5.0.0-M2</junit.jupiter.version>
+        <junit.platform.version>1.0.0-M2</junit.platform.version>
+    </properties>
 
- <dependency>
-                        <groupId>log4j</groupId>
-                        <artifactId>log4j</artifactId>
-                        <version>1.2.16</version>
-                </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
 
-<dependency>
-  <groupId>org.junit.jupiter</groupId>
-  <artifactId>junit-jupiter-api</artifactId>
-    <version>5.0.0-M4</version>
-</dependency>
+        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>5.0.4</version>
+        </dependency>
 
-<!-- https://mvnrepository.com/artifact/org.opentest4j/opentest4j -->
-<dependency>
-    <groupId>org.opentest4j</groupId>
-    <artifactId>opentest4j</artifactId>
-    <version>1.1.0</version>
-</dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
 
-      <dependency>
-          <groupId>org.seleniumhq.selenium</groupId>
-          <artifactId>selenium-server</artifactId>
-          <version>3.8.1</version>
-      </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.0.0-M4</version>
+        </dependency>
 
-      <dependency>
-          <groupId>org.apache.pdfbox</groupId>
-          <artifactId>pdfbox</artifactId>
-          <version>2.0.8</version>
-      </dependency>
+        <!-- https://mvnrepository.com/artifact/org.opentest4j/opentest4j -->
+        <dependency>
+            <groupId>org.opentest4j</groupId>
+            <artifactId>opentest4j</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 
-      <dependency>
-          <groupId>com.aventstack</groupId>
-          <artifactId>extentreports</artifactId>
-          <version>3.1.5</version>
-      </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <version>3.8.1</version>
+        </dependency>
 
-      <dependency>
-          <groupId>javax.mail</groupId>
-          <artifactId>mail</artifactId>
-          <version>1.4.2</version>
-      </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.8</version>
+        </dependency>
 
-      <dependency>
-          <groupId>org.apache.maven.archetypes</groupId>
-          <artifactId>maven-archetype-quickstart</artifactId>
-          <version>1.3</version>
-      </dependency>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.12</version>
-      </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>3.1.5</version>
+        </dependency>
 
-  </dependencies>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.archetypes</groupId>
+            <artifactId>maven-archetype-quickstart</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
-  <build>
-    <defaultGoal>clean compile assembly:single</defaultGoal>
-    <sourceDirectory>src/test/java</sourceDirectory>
-    <resources>
-    <resource>
-      <directory>src/test/resources</directory>
-    </resource>
-    </resources>
-    <finalName>pm-test-standalone</finalName>
-      <plugins>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <!-- <scope>test</scope>  -->
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <!-- <scope>test</scope>  -->
+        </dependency>
+
+    </dependencies>
+
+    <reporting>
+        <plugins>
             <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
-          <inherited>true</inherited>
-          <configuration>
-              <source>1.8</source>
-              <target>1.8</target>
-          </configuration>
-      </plugin>
-      <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-      <archive>
-          <manifest>
-              <mainClass>com.amuselabs.test.TestMain</mainClass>
-          </manifest>
-      </archive>
-      <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-      </descriptorRefs>
-      </configuration>
-      </plugin>
-    </plugins>
-  </build>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.19</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
+
+    <build>
+        <defaultGoal>clean compile assembly:single</defaultGoal>
+        <sourceDirectory>src/test/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/test/resources</directory>
+            </resource>
+        </resources>
+        <finalName>pm-test-standalone</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.amuselabs.test.TestMain</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+            <!--	 		<plugin>-->
+            <!--			<groupId>org.apache.maven.plugins</groupId> -->
+            <!--			<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--			<version>2.22.0</version>-->
+            <!--                <dependencies>-->
+            <!--                    <dependency>-->
+            <!--                        <groupId>org.junit.platform</groupId>-->
+            <!--                        <artifactId>junit-platform-surefire-provider</artifactId>-->
+            <!--                        <version>1.2.0-M1</version>-->
+            <!--                    </dependency>-->
+            <!--                    <dependency>-->
+            <!--                        <groupId>org.junit.jupiter</groupId>-->
+            <!--                        <artifactId>junit-jupiter-engine</artifactId>-->
+            <!--                        <version>5.2.0-M1</version>-->
+            <!--                    </dependency>-->
+            <!--                </dependencies>-->
+            <!--			<configuration> -->
+            <!--				<properties> -->
+            <!--					<property>-->
+            <!--					<name>junit</name>-->
+            <!--					<value>true</value>-->
+            <!--					</property> -->
+            <!--				</properties>-->
+            <!--			</configuration> -->
+            <!--	  </plugin>-->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit.platform.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
