Update outdated CSS and XPath values for elements

--- a/src/test/resources/USER_INTERFACE.properties
+++ b/src/test/resources/USER_INTERFACE.properties
@@ -2,14 +2,17 @@
 
 #user_interface=is for clicking on user_interface button browse top page.
 #name_of_a_Correspondent is for clicking on correspondents name eg click on Eli Ferrera,Kathleen Shanahan
-#data_in_CorrespondentsButton gives us the text(data) contained in Correspondents button browse top page.(eg Coorespondents(2251))
-#edit_correspondents is for clicking on EDIT CORRESPONDENTS after clicking on Correspondents in browse top page.
-
+#data_in_CorrespondentsButton gives us the text(data) contained in Correspondents button browse top page.(eg Coorespondents(2251)) - NOT WORKING
+#number_in_CorrespondentsButton gives the number of correspondents in the correspondents button
+#edit_correspondents is for clicking on EDIT CORRESPONDENTS after clicking on Correspondents in browse top page
+                                                                                                                            #CHANGES HERE
 
 correspondents=#all-cards > div:nth-child(1)   
 name_of_a_Correspondent=//*[@id="people"]/tbody/tr[2]/td[1]/a
+number_in_CorrespondentsButton=div.cta-box:nth-child(1) > a:nth-child(1) > h1:nth-child(2)
 data_in_CorrespondentsButton=#all-cards > div:nth-child(1) > a > p.cta-text-1
-edit_correspondents=body > div:nth-child(5) > button:nth-child(2)
+edit_correspondents=div.buttons_on_datatable:nth-child(2)
+#edit_correspondents=body > div:nth-child(5) > button:nth-child(2)
 text_of_entire_mail=#jog_contents
 
 
@@ -28,13 +31,16 @@ text_of_entire_mail=#jog_contents
 #received_messages_in_CorrespondentsPage is used to select the received messages element in message window
 #number_of_messages_opened_after_clicking_on_Correspondents_name is used to select element of form x/y after clicking on any correspondent's name.
 
-#give xpath for From,To,cc and bcc
+#give xpath for From,To,cc and bcc                                                                                           CHANGES HERE
   
 From=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[2]/td[2]/a
 To=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[3]/td[2]/a 
 Cc=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]/a
 bcc=//*[@id="jog_contents"]/div[2]/div[1]/table/tbody/tr[4]/td[2]/a[1]
-id=#jog_contents > div.muse-doc > div.muse-doc-header > table > tbody > tr:nth-child(6) > td:nth-child(2)
+id.link=.id-link
+id=#info-modal > div:nth-child(1) > div:nth-child(1) > div:nth-child(2)
+id.ok=#info-modal > div:nth-child(1) > div:nth-child(1) > div:nth-child(3) > button:nth-child(1)
+#id=#jog_contents > div.muse-doc > div.muse-doc-header > table > tbody > tr:nth-child(6) > td:nth-child(2)
 
 
 
@@ -136,9 +142,11 @@ received_messages_in_message_window=body > div.browsepage > div:nth-child(1) > d
 number_of_messages_opened_after_clicking_on_a_name=#pageNumbering
 
 
-#selectors of the search and Advanced Search pages
+#selectors of the search and Advanced Search pages                                                                           CHANGES HERE
+#click_on_search=ul.nav:nth-child(1) > li:nth-child(3) > a:nth-child(1)
 click_on_search=#bs-example-navbar-collapse > ul:nth-child(1) > li:nth-child(3) > a
-go_to_advanced_search=body > div:nth-child(7) > a
+go_to_advanced_search=body > div:nth-child(24) > a:nth-child(8)
+#go_to_advanced_search=body > div:nth-child(7) > a
 
 
 
