Add screenshot and download button check to Correspondents testsuite

--- a/src/test/resources/USER_INTERFACE.properties
+++ b/src/test/resources/USER_INTERFACE.properties
@@ -14,6 +14,8 @@ data_in_CorrespondentsButton=#all-cards > div:nth-child(1) > a > p.cta-text-1
 edit_correspondents=div.buttons_on_datatable:nth-child(2)
 #edit_correspondents=body > div:nth-child(5) > button:nth-child(2)
 text_of_entire_mail=#jog_contents
+correspondents_download=div.buttons_on_datatable:nth-child(4)
+correspodents_downloads_ok_button=/html/body/div[6]/div/div/div[3]/button
 
 
 
